--- a/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/policy-management.css
+++ b/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/policy-management.css
@@ -203,16 +203,7 @@ div.policy-selected-component-type {
 
 #search-users-results .ui-autocomplete {
     max-height: 300px;
-    overflow: auto;
-    border: 1px solid #aaaaaa;
     z-index: 1351;
-    border-radius: 0;
-}
-
-#search-users-results .ui-menu .ui-menu-item a.ui-state-active {
-    background: #D4E0E5 !important;
-    border: 1px solid #999999;
-    border-radius: 0;
 }
 
 div.secure-port-setting {
